Colaboratory を使用して作成しました

--- a/whisper_transcribe_v2.ipynb
+++ b/whisper_transcribe_v2.ipynb
@@ -306,7 +306,7 @@
         "        transcribe = gr.File(label=\"Transcripts text file\")\n",
         "        text_button.click(create_textfile, inputs=[video, segment_length_slider, timelag_slider], outputs=[transcribe])\n",
         "\n",
-        "block.launch(debug=True)"
+        "block.queue(default_enabled=False).launch(debug=True)"
       ]
     },
     {
@@ -322,7 +322,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiA/fwx+BZZ05mjXSRVJSc"
+      "authorship_tag": "ABX9TyP8t68/wq72DRBFOko1rXDl"
     },
     "kernelspec": {
       "display_name": "Python 3",
