Colaboratory を使用して作成しました

--- a/ReazonSpeech.ipynb
+++ b/ReazonSpeech.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+sHgm49zlh8oTKgIxTc50",
+      "authorship_tag": "ABX9TyOgD6Xjm+uG0Jf9pWqWm/CL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3112,7 +3112,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "\"\"\"\n",
+        "注意点\n",
+        "・ランタイムのタブから「ランタイムのタイプを変更」でGPUに設定すると高速に文字起こしができます\n",
+        "・ReazonSpeechに使われるライブラリには依存関係があり、import時にエラーがでる場合があります。\n",
+        "　その場合、ランタイムのタブから「ランタイムを接続解除して削除」をして、再度上から順番に実行すれば動作するかと思います。\n",
+        "　(それでもエラーが出る場合、ちょっと原因はわからないです…すみません…！)\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "id": "OrD7TxDNe96B",
+        "outputId": "7feee5ba-486c-4f12-aa8e-a82d0d33b189"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\n注意点\\n・ランタイムのタブから「ランタイムのタイプを変更」でGPUに設定すると高速に文字起こしができます\\n・ReazonSpeechに使われるライブラリには依存関係があり、import時にエラーがでる場合があります。\\n\\u3000その場合、ランタイムのタブから「ランタイムを接続解除して削除」をして、再度上から順番に実行すれば動作するかと思います。\\n\\u3000(それでもエラーが出る場合、ちょっと原因はわからないです…すみません…！)\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "YyAK_QCYM0Rb"
       },
@@ -3136,9 +3172,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZuAWZip8QN5H",
-        "outputId": "e46736d2-4285-42d2-991c-d326961d9f93"
+        "outputId": "fe426530-32c1-4c5b-df65-766576dc05f7"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
