Colaboratory を使用して作成しました

--- a/rinna_4b.ipynb
+++ b/rinna_4b.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyOD9xRUWmf91Js1JCJTM5l4",
+      "authorship_tag": "ABX9TyP8KsTXfQ16pD1N7abRVPCl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1419,7 +1419,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 4b-instruction-ppo"
+        "# 4b-instruction-stf"
       ],
       "metadata": {
         "id": "qD6prYnMbGtf"
